Fixed navbar issue that caused text to be cut off in Safari

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -111,7 +111,7 @@
         display: block;
     }
     .nav-menu ul {
-        display: flex;
+        display: block;
         position: fixed;
         height: calc(100vh - 65px);
         width: 20%;
@@ -121,7 +121,6 @@
         left: 0;
         bottom: 0;
         padding: 0;
-        flex-direction: column;
     }
     .nav-menu li {
         list-style-type: none;
